--- a/main.tex
+++ b/main.tex
@@ -17,7 +17,7 @@
 \boxedpoints
 % \printanswers
 
-\title{Project II: Ray Tracer}
+\title{Project II: Ray Tracing Engine}
 \author{CSCI 155 Computer Graphics\\Pitzer College\\Spring 2019}
 \date{Due: 10 p.m. on Wednesday, May 8}
 
